namespaces/live.cloud-platform.service.justice.gov.uk/data-platform-app-opg-mi-dashdemo-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-platform-app-opg-mi-dashdemo-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "dev"
    pod-security.kubernetes.io/audit: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "OPG"
    cloud-platform.justice.gov.uk/slack-channel: "data-platform-application-migration-support"
    cloud-platform.justice.gov.uk/application: "Opg Mi Dashdemo"
    cloud-platform.justice.gov.uk/owner: "data and research team: "
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/opg-mi-dashdemo"
    cloud-platform.justice.gov.uk/team-name: "opg-mi-dashdemo-admin-team"
    cloud-platform.justice.gov.uk/review-after: ""
